--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
   "name": "bookshelf_",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14 || 16 || 18",
+    "npm": ">=8.16.0"
+  },
   "dependencies": {
-    "@reach/dialog": "^0.18.0",
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
+    "@mui/material": "^5.12.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
