--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "npm": ">=8.16.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
-    "@mui/material": "^5.12.3",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +21,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "dotenv": "^16.0.3",
+    "firebase": "^9.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
