add style file, changed some routes, fixed problem with auth

--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
-API_KEY=AIzaSyCnHK78wH9Bz6MBn9B29BU0iWaCIzm4YNs
-
 REACT_APP_API_URL=https://www.googleapis.com/books/v1/volumes?key=AIzaSyCnHK78wH9Bz6MBn9B29BU0iWaCIzm4YNs&download=epub&q=
-REACT_APP_AUTH_URL=https://auth-provider.jk/auth
 
+REACT_APP_API_KEY=AIzaSyCnHK78wH9Bz6MBn9B29BU0iWaCIzm4YNs
+REACT_APP_AUTHDOMAIN=bookshelf-940ac.firebaseapp.com
+REACT_APP_PROJECTID=bookshelf-940ac
+REACT_APP_STORAGEBUCKET=bookshelf-940ac.appspot.com
+REACT_APP_MESSAGINGSENDERID=398034896177
+REACT_APP_APPID=1:398034896177:web:a6fdbc5ee9bb309a4e5c10
+REACT_APP_MEASUREMENTID=G-8211BH445M
