--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "bookshelf_",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "14 || 16 || 18",
-    "npm": ">=8.16.0"
-  },
+  "engines": {},
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
@@ -21,6 +18,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "firebase": "^9.22.0",
+    "he": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
@@ -53,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/he": "^1.2.0",
     "tailwindcss": "^3.3.2"
   }
 }
